--- a/src/Styles.css
+++ b/src/Styles.css
@@ -65,6 +65,16 @@ div.neutron-chart-window {
     margin: 10px;
 }
 
+div.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-rows: auto;
+    /*grid-template-rows: 1;*/
+    gap: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
 /*-----------RPM ENTRY ELEMENTS-----------*/
 
 div.rpm-entry {
