--- a/src/Styles.css
+++ b/src/Styles.css
@@ -71,10 +71,25 @@ div.grid {
     grid-template-rows: auto;
     /*grid-template-rows: 1;*/
     gap: 5px;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin: 10px;
+    padding: 10px;
 }
 
+#ov-left{
+    flex-direction: column;
+    /* width:calc(75% - 50px); */
+    width:10%;
+    min-width: 165px;
+    float:left;
+}
+
+#ov-right{
+    flex-direction: column;
+    /* width:calc(75% - 50px); */
+    width:75%;
+    max-width: 1200px;
+    float:left;
+}
 #StatusGrid {
     width:50%;
     border-bottom-color: darkgrey;
