--- a/src/Styles.css
+++ b/src/Styles.css
@@ -176,3 +176,62 @@ div.video-window img {
 }
 
 
+/*-----------LANE CAMERA ELEMENTS-----------*/
+
+/* Alarm Outline Class */
+div.MuiPaper-outlined {
+    border: 6px solid red
+}
+
+/* MuiCards */
+div.MuiCardHeader-root {
+    margin: 0;
+    padding: 0;
+    background-color: lightblue;
+}
+
+.css-46bh2p-MuiCardContent-root:last-child {
+    padding: 0;
+}
+
+.display-card {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+div.lane-cam-video-window {
+    width: 100%;
+}
+
+div.lane-cam-video-window canvas {
+    width: 100%;
+    max-width: 500px;
+    max-height: 375px;
+}
+
+div.lane-cam-video-window img {
+    width: 100%;
+    max-height: 375px;
+    max-width: 500px;
+}
+
+
+div.lane-camera-grid {
+    height: 800px;
+    width: 1200px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: min-content;
+    grid-gap: 0;
+    align-items: center;
+ }
+
+#lane-camera-card {
+    padding: 0;
+    margin: 0;
+}
+
+.pagination-bar {
+    text-align: center;
+}
